# omni-llm

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  labels.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  label-sync.yml  release-drafter.yml  release.yml  stale.yml  welcome.yml
omnillm/: __init__.py  __main__.py  server.py
omnillm/adapters/: llamacpp_adapter.py  ollama_adapter.py
omnillm/core/: base.py  manager.py  session.py
tests/: test_adapters.py  test_manager.py  test_server.py  test_session.py
