[project]
name = "omni-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=1.15.0",
    "llama-cpp-python>=0.3.23",
    "ollama>=0.6.2",
    "pytest>=9.0.3",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
]

[dependency-groups]
dev = [
    "omni-llm",
]

[tool.uv.sources]
omni-llm = { workspace = true }
