[project]
name = "omni-local-llm"
version = "0.1.0"
description = "A unified Python interface and API server for running local Large Language Models."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "matteoespo", email = "matteoespo@users.noreply.github.com" },
]
keywords = [
    "llm",
    "local-llm",
    "ollama",
    "llama-cpp",
    "openai",
    "ai",
    "machine-learning",
    "inference",
    "chatbot",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "huggingface-hub>=1.15.0",
    "llama-cpp-python>=0.3.23",
    "ollama>=0.6.2",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
]

[project.urls]
Homepage = "https://github.com/matteoespo/omni-local-llm"
Repository = "https://github.com/matteoespo/omni-local-llm"
Issues = "https://github.com/matteoespo/omni-local-llm/issues"

[dependency-groups]
dev = [
    "omni-local-llm",
    "pytest>=9.0.3",
    "pytest-asyncio",
    "pytest-cov>=6.0",
    "ruff>=0.8.0",
]

[tool.uv.sources]
omni-local-llm = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["omnillm"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["omnillm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["omnillm"]
omit = ["omnillm/__pycache__/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
